--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ copyright = "&copy;2022 Alan Braz"
 
   # Metadata for search engines and social sharing
   author = "Alan Braz"
-  description = "I am a Cloud Agile Software DevOps Research Engineer at IBM Research Brazil currently living in Campinas, SP, Brazil. My interests range from coffee to running. I am also interested in design thinking, dogs, basketball and taekwondo."
+  description = "Research Research Engineer at IBM Research Brazil"
   shareImage = "images/alan.jpg"
   twitterHandle = "alanbraz"
 
@@ -83,7 +83,11 @@ copyright = "&copy;2022 Alan Braz"
   # Links List #3
   [[params.links]]
     [params.links.list3]
-      heading = "Projects"
+      heading = "Highlights"
+
+      [[params.links.list3.link]]
+        text = "InnerSource"
+        url = "innersource.pdf"
 
       [[params.links.list3.link]]
         text = "Pull reCast"
@@ -94,7 +98,7 @@ copyright = "&copy;2022 Alan Braz"
         url = "https://github.com/IBM/AIMMX"
 
       [[params.links.list3.link]]
-        text = "Blog - old"
+        text = "Old blog"
         url = "http://alanbraz.wordpress.com/"
         
   # The original template is released under the Creative Commons Attribution 3.0 License.
