--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ copyright = "&copy;2022 Alan Braz"
 
   # Metadata for search engines and social sharing
   author = "Alan Braz"
-  description = "Research Research Engineer at IBM Research Brazil"
+  description = "Research Software Engineer at IBM Research Brazil"
   shareImage = "images/alan.jpg"
   twitterHandle = "alanbraz"
 
