--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,10 @@ relativeURLs = true
 uglyURLs = true
 
 # Enter your tracking code to enable Google Analytics
-googleAnalytics = "G-8M63DZS7GD" #MEASUREMENT ID
+[config]
+  [services]
+    [googleAnalytics]
+      id = "G-8M63DZS7GD"
 
 # Copyright
 copyright = "&copy;2024 Alan Braz"
@@ -94,7 +97,7 @@ defaultContentLanguage = 'pt-br'
       heading = "Professional"
 
       [[params.links.list1.link]]
-        text = "Agende sua MentorIA aqui"
+        text = "Agende sua MentorIA"
         url = "https://www.calendly.com/alanbraz"
         new_tab = true
 
