--- a/config.toml
+++ b/config.toml
@@ -167,11 +167,20 @@ defaultContentLanguageInSubdir = true
     [params.links.list3]
       heading = "Talks"
 
-      
       [[params.links.list3.link]]
-        text = "HackTown 2024"
-        url = "https://link.pullrecast.dev/hacktown24"
+        text = "Cidade Empreende 2025"
+        url = "https://ibm.box.com/v/cidade-emp-ia-ibm"
         new_tab = true
+
+      [[params.links.list3.link]]
+        text = "Vida com IA #103"
+        url = "https://open.spotify.com/episode/40pdjHdfCbNQ7ayBo9f60Q
+        new_tab = true
+        
+      # [[params.links.list3.link]]
+      #   text = "HackTown 2024"
+      #   url = "https://link.pullrecast.dev/hacktown24"
+      #   new_tab = true
         
       [[params.links.list3.link]]
         text = "IA Sob Controle podcast #42"
