--- a/config.toml
+++ b/config.toml
@@ -169,8 +169,8 @@ defaultContentLanguageInSubdir = true
 
       
       [[params.links.list3.link]]
-        text = "HackTown 2024"
-        url = "https://link.pullrecast.dev/hacktown24"
+        text = "CNEX - Preparando-se para o Futuro"
+        url = "https://link.pullrecast.dev/cnex25"
         new_tab = true
         
       [[params.links.list3.link]]
